user-registeration/metadata/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>should define the role this contact is playing in their relationship with Borrego.</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Contact</fullName>
                </value>
                <value>
                    <fullName>Host Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Owner Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Decision-Maker</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Not Yet Identified</fullName>
                </value>
                <value>
                    <fullName>Portal User</fullName>
                </value>
                <value>
                    <fullName>Primary O&amp;M Contact</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Technical Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Billing Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Service Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Performance Report Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Case Closure Report Contact</fullName>
                </value>
                <value>
                    <fullName>Amex Contact</fullName>
                </value>
                <value>
                    <fullName>Waiver Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Purchasing</fullName>
                </value>
                <value>
                    <fullName>EPC Contact</fullName>
                </value>
                <value>
                    <fullName>Development Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M New Case Contact</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Completed Work Order Contact</fullName>
                </value>
                <value>
                    <fullName>Anza Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Billing_Contact__c</fullName>
        <formula>IF( INCLUDES( Contact_Type__c, &quot;Billing Contact&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>DO NOT USE.   REPLACED BY CONTACT TYPE AND FORMULA FIELD PRIMARY CONTACT 2.</description>
        <label>Primary Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>